# Unitasks-cpp-Designpatterns

./: README.md
1  - UML/: lab1.sln  lab1.vcxproj  lab1.vcxproj.filters
1  - UML/src/: Shouter.h  SoundProducer.h  Talker.h  Uppgift1.h  Whisperer.h  main.cpp
2 - Strategy/: lab2.sln  lab2.vcxproj  lab2.vcxproj.filters
2 - Strategy/src/: Bakery.h  BakingRecepy.h  BakingRecepyManager.cpp  BakingRecepyManager.h  Ingredient.h  Kladdkaka.h  NoBakingException.h  Pizza.h  Scones.h  Sockerkaka.h  main.cpp
3 - Bridge/: CMakeLists.txt  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters
3 - Bridge/pwrSRC/: FuelCell.cpp  FuelCell.h  GasTurbine.cpp  GasTurbine.h  PowerSource.h  PowerSourceAdapters.cpp  PowerSourceAdapters.h  PowerSourceTest.cpp  V8Classic.cpp  V8Classic.h  exPowerSource.pro
3 - Bridge/src/: RaceCar.h  SpaceShip.h  Submarine.h  Vehicle.h  main.cpp
4 - Abstract Factory/: ALL_BUILD.vcxproj  lab4.sln  lab4.vcxproj  lab4.vcxproj.filters
4 - Abstract Factory/src/: Action.cpp  Action.h  Game.h  GameFactory.cpp  GameFactory.h  Obstacle.h  Player.cpp  Player.h  testLab4.cpp
5 - Command/: CMakeLists.txt  lab5.sln  lab5.vcxproj  lab5.vcxproj.filters
5 - Command/src/: Command.h  CommandManager.cpp  CommandManager.h  CommandMove.h  CommandReset.h  CommandShow.h  HanoiEngine.cpp  HanoiEngine.h  PlayHanoi.cpp  Replayer.h
6 - Decorator/: CMakeLists.txt  lab6.sln  lab6.vcxproj  lab6.vcxproj.filters
6 - Decorator/src/: AddonDecorator.h  Component.h  DrinkComponent.h  test.cpp
7 - DiskChat-Observer/ChatServer/: CMakeLists.txt  ChatLogger.cpp  ChatLogger.h  ChatObserver.h  ClientConnection.cpp  ClientConnection.h  ClientListener.cpp  ClientListener.h  ClientProxy.h  Message.h  server.sln  server.vcxproj
7 - Proxy/ChatServer/: Address.h  ChatServer.cpp  Connection.h  Message.cpp  Server.h  server.vcxproj.filters
8 - Factories/prototype/: CMakeLists.txt  lab6.sln  lab6.vcxproj  lab6.vcxproj.filters
8 - Factories/prototype/src/: Component.h  DecoratorPrototype.h  DrinkPrototype.h  PrototypeManager.cpp  PrototypeManager.h  prices.h  test.cpp
8 - Factories/singelton/: CMakeLists.txt  lab4.sln  lab4.vcxproj  lab4.vcxproj.filters
8 - Factories/singelton/src/: Game.cpp  GameFactory.cpp  GameFactory.h  Obstacle.cpp  testLab4.cpp
